# url_shortener

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 12c528d1f2d8_add_role_to_users.py  54cbe2a93377_initial_migration.py  c32f1dfda9ca_add_summary_to_url.py  fe97af04811a_add_clicks_to_url.py  ffdbd3ad560e_add_users_and_owner_id.py
app/: main.py
app/api/: deps.py
app/api/v1/: endpoints.py  router.py
app/api/v1/routes/: admin.py  auth.py  links.py  redirect.py  stats.py
app/core/: config.py  database.py  logging.py
app/crud/: url.py  user.py
app/models/: base.py  url.py  user.py
app/schemas/: auth.py  url.py
app/services/: auth.py  email.py  redis_service.py  shortener.py  summarizer.py
app/utils/: pagination.py  timer.py
streamlit_app/: app_ui.py
