[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "groq>=0.28.0",
    "httpx>=0.28.1",
    "orjson>=3.11.9",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "st-copy-to-clipboard>=0.1.6",
    "streamlit>=1.57.0",
    "streamlit-autorefresh>=1.0.1",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
